<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/iv_back_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_white" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-Ticket"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_back_ticket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_back_ticket"
            app:layout_constraintTop_toTopOf="@+id/iv_back_ticket" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/options"
            app:layout_constraintBottom_toBottomOf="@+id/textView27"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView27" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout1"
            android:layout_width="match_parent"
            android:layout_height="0dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.vipulasri.ticketview.TicketView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:ticketCornerRadius="10dp"
                    app:ticketCornerType="rounded"
                    app:ticketDividerPadding="0dp"
                    app:ticketDividerType="dash"
                    app:ticketElevation="5dp"
                    app:ticketOrientation="horizontal"
                    app:ticketScallopPositionPercent="70"
                    app:ticketScallopRadius="20dp"
                    app:ticketShowBorder="false"
                    app:ticketShowDivider="true" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/business_class"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business_class"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/slm"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
                    app:layout_constraintEnd_toStartOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
                    app:layout_constraintVertical_bias="0.6" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView28"
                    app:layout_constraintEnd_toStartOf="@+id/textView29"
                    app:layout_constraintTop_toTopOf="@+id/textView28"
                    app:srcCompat="@drawable/flight_no" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="BTL"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView8" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="4 Flight Tickets"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Passengers"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView30"
                    app:layout_constraintTop_toBottomOf="@+id/textView30" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/_2_adults"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/textView31"
                    app:layout_constraintTop_toBottomOf="@+id/textView31" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/flight_no"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView32"
                    app:layout_constraintTop_toBottomOf="@+id/textView32" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="BKN7"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/textView33"
                    app:layout_constraintTop_toBottomOf="@+id/textView33" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/_class"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView34"
                    app:layout_constraintTop_toBottomOf="@+id/textView34" />

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Business"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/textView35"
                    app:layout_constraintTop_toBottomOf="@+id/textView35" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:text="Date"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView31"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView31" />

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_12_feb_2020"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView32"
                    app:layout_constraintStart_toStartOf="@+id/textView37"
                    app:layout_constraintTop_toTopOf="@+id/textView32" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gate"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView33"
                    app:layout_constraintStart_toStartOf="@+id/textView38"
                    app:layout_constraintTop_toTopOf="@+id/textView33" />

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_66b"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView34"
                    app:layout_constraintStart_toStartOf="@+id/textView39"
                    app:layout_constraintTop_toTopOf="@+id/textView34" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seat"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView35"
                    app:layout_constraintStart_toStartOf="@+id/textView40"
                    app:layout_constraintTop_toTopOf="@+id/textView35" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21 B"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView36"
                    app:layout_constraintStart_toStartOf="@+id/textView41"
                    app:layout_constraintTop_toTopOf="@+id/textView36" />


                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView36"
                    app:srcCompat="@drawable/bar_code" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_design"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/cardview_search_flights"
                app:layout_constraintEnd_toEndOf="@+id/main_layout1"
                app:layout_constraintStart_toStartOf="@+id/main_layout1"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout3" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/cardview_search_flights"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="@+id/constraint_design"
                app:layout_constraintStart_toStartOf="@+id/constraint_design"
                app:layout_constraintTop_toBottomOf="@+id/constraint_design" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView44"
                app:layout_constraintEnd_toStartOf="@+id/textView44"
                app:layout_constraintTop_toTopOf="@+id/textView44"
                app:srcCompat="@drawable/share_with" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="Share with friend and family"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/main_layout1"
                app:layout_constraintStart_toStartOf="@+id/main_layout1"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>