<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.bookingtickets.ui.flight.FlightViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            app:elevation="0dp"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                app:navigationIcon="@drawable/back"
                android:background="@color/white"
                android:id="@+id/topAppBar"
                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_height="?attr/actionBarSize">


                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/select_flight"
                    android:textColor="@color/black"
                    android:layout_marginEnd="80dp"
                    android:textSize="20sp"
                    android:gravity="center"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.appbar.MaterialToolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                android:padding="20dp"
                app:layout_scrollFlags="noScroll"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your Trip"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="AMS - DEL"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/_12_feb_2020"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:cardBackgroundColor="#CAD1DE"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintStart_toEndOf="@id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/textView9">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/one_way"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/cardView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.9"
                    app:layout_constraintStart_toEndOf="@+id/cardView3"
                    app:layout_constraintTop_toTopOf="@+id/cardView3"
                    app:srcCompat="@drawable/settings" />


            </androidx.constraintlayout.widget.ConstraintLayout>



        </com.google.android.material.appbar.AppBarLayout>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_flight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 />




    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


</layout>